# aoc22

./: Cargo.toml  gen-day.sh  makefile
src/: direction.rs  grid2.rs  lib.rs  point2.rs
templates/: day.rs
