[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
gen-iter = "0.2.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
lending-iterator = "0.1.6"
num = "0.4.0"
range_union_find = "0.4.3"
regex = "1.7.0"
